Started removing quasar library, using vuelite instead; still need to find a replacement for q-tabs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -26,6 +26,11 @@ a,
   }
 }
 
+.lv-button:enabled:hover {
+  background-color: inherit;
+  color: gray;
+}
+
 /* @media (min-width: 1024px) {
   body {
     display: flex;
